# KaGen

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  compile.sh  out  pyproject.toml  test  test.sh
app/: CLI11.h  CMakeLists.txt  KaGen.cpp  arg_parser.h  generate_kagen.cpp  interface_test.cpp  kagen.cpp  parse_parameters.h
app/tools/: CMakeLists.txt  chkgraph.cpp  chkmetis.cpp  graphstats.cpp  img2kargb.cpp  pangraph.cpp  part2img.cpp  strutils.h  upsb2kargb.cpp
examples/: CMakeLists.txt  csr_c_example.c  csr_example.cpp  example_chunk_streaming_edges.cpp  example_chunk_streaming_nodes.cpp  example_edge_streaming.cpp  example_node_streaming.cpp  new_edge_streaming_framework.cpp  new_node_streaming_framework.cpp  options_string_c_example.c  options_string_cpp_example.cpp  options_string_example.cc  python_example.py  rgg2d_c_example.c  rgg2d_cpp_example.cpp  rgg2d_example.cpp  streaming_example.cpp  streaming_example_sequential.cpp  streaming_rhg_example.cpp
include/: CMakeLists.txt  definitions.h  definitions.hpp  generator_config.h  postprocessing.h
include/generators/barabassi/: barabassi.h  barabassi.hpp
include/generators/geometric/: geometric_2d.h  geometric_2d.hpp  geometric_3d.h  geometric_3d.hpp
include/generators/gnm/: gnm_directed.h  gnm_directed.hpp  gnm_undirected.h  gnm_undirected.hpp
include/generators/gnp/: gnp_directed.h  gnp_directed.hpp  gnp_undirected.h  gnp_undirected.hpp
include/generators/grid/: grid_2d.h  grid_3d.h
include/generators/hyperbolic/: hyperbolic.h  hyperbolic.hpp
include/generators/kronecker/: kronecker.h  mod_arith.h  splittable_mrg.h  utils.h
include/io/: generator_io.h
include/sampling/: method_d.hpp  method_h.hpp  method_p.hpp  method_r.hpp  method_sh.hpp
include/tools/: arg_parser.h  benchmark.h  cairo_drawer.h  geometry.h  macros_assertions.h  macros_common.h  mersenne.h  mpreal.h  rng_wrapper.h  sorted_mersenne.h  spooky_hash.h  timer.h  var_gen.h
kagen/: CMakeLists.txt  ckagen.cpp  ckagen.h  context.cpp  context.h  definitions.h  edge_range.cpp  edge_range.h  external_memory_facade.cpp  external_memory_facade.h  facade.cpp  facade.h  factories.cpp  factories.h  generator_config.h  in_memory_facade.cpp  in_memory_facade.h  interface_definitions.h  io.cpp  io.h  kagen.cpp  kagen.h  postprocessing.h  skagen.cpp  skagen.h  streaming.cpp  streaming.h  streaming_facade.cpp  streaming_facade.h
kagen/comm/: comm.h  comm_types.h  hybrid_comm.cpp  hybrid_comm.h  mpi_comm.cpp  mpi_comm.h  seq_comm.cpp  seq_comm.h  virtual_comm.h
kagen/edgeweight_generators/: default_generator.h  edge_weight_generator.h  euclidean_distance_generator.h  hashing_based_generator.cpp  hashing_based_generator.h  none_generator.h  per_edge_weight_generator.h  uniform_random_generator.cpp  uniform_random_generator.h  voiding_generator.h
kagen/generators/: generator.cpp  generator.h  graph500_generator.cpp  graph500_generator.h
kagen/generators/barabassi/: barabassi.cpp  barabassi.h
kagen/generators/brain/: brain.cpp  brain.h
kagen/generators/edgeweights/: edge_weight_generator.h  per_edge_weight_generator.h
kagen/generators/file/: file_graph.cpp  file_graph.h
kagen/generators/geometric/: delaunay.cpp  delaunay.h  geometric_2d.h  geometric_3d.h  rgg.cpp  rgg.h
kagen/generators/gnm/: gnm_directed.cpp  gnm_directed.h  gnm_undirected.cpp  gnm_undirected.h
kagen/generators/gnp/: gnp_directed.cpp  gnp_directed.h  gnp_undirected.cpp  gnp_undirected.h
kagen/generators/grid/: grid_2d.cpp  grid_2d.h  grid_3d.cpp  grid_3d.h
kagen/generators/hyperbolic/: hyperbolic.cpp  hyperbolic.h
kagen/generators/image/: image_mesh.cpp  image_mesh.h  kargb.cpp  (+2 more)
kagen/io/: binary_parhip.cpp  binary_parhip.h  buffered_writer.h  coordinates.cpp  coordinates.h  dot.cpp  dot.h  edgelist.cpp  edgelist.h  freight-netl.cpp  freight-netl.h  generator_io.h  graph_format.cpp  graph_format.h  graph_reader.h  graph_writer.cpp  graph_writer.h  hmetis.cpp  hmetis.h  io.cpp  io.h  metis.cpp  metis.h  mmap_toker.h  netd_are.cpp  netd_are.h  parhip.cpp  parhip.h  seq_graph_writer.cpp  seq_graph_writer.h
kagen/sampling/: CMakeLists.txt  LICENSE  README.md  benchmark.hpp  config.hpp  definitions.hpp  hash.cpp  hash.hpp  hypergeometric_distribution.hpp  methodB.hpp  methodD.hpp  methodH.hpp  methodP.hpp  methodR.hpp  methodSH.hpp  sampling_config.hpp  timer.hpp
kagen/tlx/: aggregate.hpp  clz.hpp  constexpr.hpp  delegate.hpp  integer_log2.hpp  likely.hpp  simple_vector.hpp  thread_pool.cpp  thread_pool.hpp
kagen/tools/: converter.h  geometry.h  hash_map.h  mersenne.h  newton.h  postprocessor.cpp  postprocessor.h  random_permutation.h  rng_wrapper.h  sorted_mersenne.h  statistics.cpp  statistics.h  utils.h  validator.cpp  validator.h
kagen/vertexweight_generators/: default_generator.h  none_generator.h  uniform_random_generator.cpp  uniform_random_generator.h  vertex_weight_generator.h  voiding_generator.h
tests/: CMakeLists.txt  edge_range.cpp  gather.h  image_mesh_test.cpp  simple_graphs_test.cpp  utils.h
tests/cmake/: KaTestrophe.cmake  gtest_mpi_listener.h  mpi_gtest_main.cc
tests/comm/: comm_test.cpp
tests/edge_weights/: edge_generation_test.cpp
tests/edgeweight/: barabassi_edge_weight_test.cpp  edgeweight_test.cpp  edgeweight_utils.h  geometric_edge_weight_test.cpp  gnm_undirected_edge_weight_test.cpp
tests/file/: generic_file_generator_test.cpp  parhip_reader_writer.cpp
tests/geometric/: geometric_2d.cpp  geometric_2d_test.cpp  geometric_3d.cpp  geometric_3d_test.cpp  geometric_one_PE_test.cpp  hyperbolic_test.cpp  rgg2d_test.cpp  rgg3d_test.cpp  rgg_utils.h  utils.h
tests/image/: kargb_test.cpp
tests/path/: general_path_generator_test.cpp
tests/permutation/: permutation_test.cpp
tests/postprocessor/: redistribute_edges_balanced_test.cpp  redistribute_edges_test.cpp
tests/rmat/: rmat_distribution_test.cpp
tests/static/: common.h  generic_generator_test.cpp  generic_static_generator_test.cpp  metis_test.cpp
tests/util/: utils.h
tests/utils/: find_pe_in_range_test.cpp
(+124 files in other folders)
