add_executable(example_cpp_csr csr_cpp_example.cpp)
target_link_libraries(example_cpp_csr PRIVATE KaGen::KaGen)

add_executable(example_c_csr csr_c_example.c)
target_link_libraries(example_c_csr PRIVATE KaGen::KaGen)

add_executable(example_cpp_rgg2d rgg2d_cpp_example.cpp)
target_link_libraries(example_cpp_rgg2d PRIVATE KaGen::KaGen)

add_executable(example_c_rgg2d rgg2d_c_example.c)
target_link_libraries(example_c_rgg2d PRIVATE KaGen::KaGen)

add_executable(example_cpp_options_string options_string_cpp_example.cpp)
target_link_libraries(example_cpp_options_string PRIVATE KaGen::KaGen)

add_executable(example_c_options_string options_string_c_example.c)
target_link_libraries(example_c_options_string PRIVATE KaGen::KaGen)

add_executable(example_chunk_streaming_edges example_chunk_streaming_edges.cpp)
target_link_libraries(example_chunk_streaming_edges PRIVATE KaGen::KaGen)

add_executable(example_chunk_streaming_nodes example_chunk_streaming_nodes.cpp)
target_link_libraries(example_chunk_streaming_nodes PRIVATE KaGen::KaGen)

add_executable(example_node_streaming example_node_streaming.cpp)
target_link_libraries(example_node_streaming PRIVATE KaGen::KaGen)

add_executable(example_edge_streaming example_edge_streaming.cpp)
target_link_libraries(example_edge_streaming PRIVATE KaGen::KaGen)
